# Ai-Chatbot-Flask

./: Procfile  README.md  data.json  deploy_model.py  label_encoder.pkl  model.pth  pyproject.toml  pytorch_train.ipynb  railway.json  requirements.txt  setup.py  vectorizer.pkl  vercel.json
api/: index.py
static/: script.js  style.css
templates/: home.html
