[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-chatbot-flask"
version = "1.0.0"
description = "AI Chatbot for Mahmoud Ayman"
requires-python = ">=3.11"
dependencies = [
    "Flask==2.3.3",
    "torch==2.2.0",
    "numpy==1.24.3",
    "scikit-learn==1.3.0",
    "gunicorn==21.2.0"
]
